style.css
	.headingFont{
		color: #8F540C;
		text-align:center;
		vertical-align: middle;
		padding-top: 2%;
		padding-bottom: 5%;
		text-transform: uppercase;
	}

	h4 {
		color: #8F540C;
		text-align:center;
		vertical-align: middle;
		padding-top: 2%;
		padding-bottom: 1%;
		text-transform: uppercase;
	}

	.authors{
		text-align: center;
		color: #8F540C;
		font-size: small;
		padding-bottom: 5px;
	}

	.navbar{
		padding-top: 10px
		padding-bottom: 30px;
		background: #FFD6A3;
		width: 100%;
		text-transform: uppercase;
	}

	a:link, a:visited {
  		background-color: #FFD6A3;
  		color: #e0702b;
  		border: 2px #ffc299;
  		padding: 10px 20px;
  		text-align: center;
  		text-decoration: none;
  		display: inline-block;
	}

	table {
		column-count: 2;
		column-gap: 5%;
	}

	a:hover, a:active {
  /*		background-color: #ffe0cc;*/
  		color: #8F540C;
	}

	hr{
		border: 1px dashed #e0702b;
	}

	.logo {
		display: block;
		margin-left: auto;
		margin-right: auto;
		width: 20%;
		padding-bottom: 7px;
	}

	body {
		margin-top: 40px ;
		margin-right:7.5%;
		margin-left:7.5% ;
		margin-bottom:40px; 
		font-family: Futura, "Trebuchet MS", Arial, sans-serif;
		background: #FFD6A3;
	}

	.tableauPlaceholder{
		border-radius: 50px 50px;
		background: white;
		padding: 20px;
		width: auto;
		height: 90vh;
		padding-bottom: 10px;
	}

	.footer {
/*		position: fixed;*/
		left: 0;
		bottom: 0;
		width: 100%;
		background-color: #FFD6A3;
		color: white;
		text-align: center;
		}

	.homeBio{
		width: 75%;
		margin: auto;
		line-height: 1.5;
		font-size: 1.6em;
		text-align: center;
		color: #B57526;
	}

	.dataBio{
		width: 80%;
		margin: auto;
		line-height: 1.5;
		font-size: 1.2em;
		text-align: center;
		color: #B57526;
	}

	.disclaimer{
		width: 50%;
		margin: auto;
		line-height: 1.5;
		font-size: 1em;
		text-align: center;
		color: #B57526;
		padding-bottom: 5%;
	}

	.description{
		width: 80%;
		margin: auto;
		line-height: 1.5;
		font-size: 1.3em;
		text-align: center;
		color: #B57526;
		column-count: 2;
		column-gap: 5%;
	}	

	.mapDescription{
		width: 80%;
		margin: auto;
		line-height: 1.5;
		font-size: 1.3em;
		text-align: center;
		color: #B57526;
		padding-bottom: 1%
	}	

	.sectionMenu{
		width: 80%;
		column-count: 2;
		column-gap: 5%;
	}

	.sectionMenuData{
		width: 80%;
		column-count: 1;
		column-gap: 5%;
	}

